Update BaseCryptor.java